MOBILE-3149 style: Fix collapsible items on tablet

--- a/src/theme/globals.mixins.scss
+++ b/src/theme/globals.mixins.scss
@@ -270,6 +270,7 @@
             &.collapsible-collapsed {
                 overflow: hidden;
                 min-height: calc(var(--collapsible-min-button-height) + 12px);
+                max-height: calc(var(--max-height), auto);
 
                 .collapsible-toggle-arrow {
                     transform: rotate(90deg);
